updated to be in dark mode, no longer a flashbang

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ body {
   /* Firefox */
 }
 
+form, input, label, p, textarea, th, td, tr, select, option{
+  color: white !important;
+}
+
 .content {
   max-width: 80%;
   margin: auto;
